// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-nav/presenters/ProfileAction  1`] = `
<div
  className="hig__top-nav__action"
>
  <div
    className="hig__flyout-v1 hig__flyout-v1--exited hig__flyout-v1--top-right"
  >
    <div
      className="hig__flyout-v1__action"
    >
      <button
        className="hig__top-nav__profile-action"
        onClick={[Function]}
        type="button"
      >
        <figure
          aria-label="Avatar for Wolfgang Pauli"
          className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--8"
        >
          <div
            aria-hidden="true"
            className="hig__avatarV2__initials"
          >
            WP
          </div>
        </figure>
      </button>
    </div>
    <div
      className="hig__flyout-v1__container"
      style={
        Object {
          "left": undefined,
          "top": undefined,
        }
      }
    >
      <div
        aria-hidden="true"
        className="hig__flyout-v1__chevron"
        role="presentation"
      />
      <div
        aria-hidden="true"
        className="hig__flyout-v1__chevron-cover"
        role="presentation"
      />
      <div
        className="hig__flyout-v1__panel-container"
        style={
          Object {
            "maxHeight": undefined,
          }
        }
      >
        <div
          className="hig__flyout-v1__panel-container__inner"
        >
          <div
            className="hig__flyout-v1__panel"
            onScroll={undefined}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`top-nav/presenters/ProfileAction  2`] = `
<div
  className="hig__top-nav__action"
>
  <div
    className="hig__flyout-v1 hig__flyout-v1--exited hig__flyout-v1--top-right"
  >
    <div
      className="hig__flyout-v1__action"
    >
      <button
        className="hig__top-nav__profile-action"
        onClick={[Function]}
        type="button"
      >
        <figure
          aria-label="Avatar for Hans Hellmann"
          className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--3"
        >
          <div
            aria-hidden="true"
            className="hig__avatarV2__initials"
          >
            HH
          </div>
        </figure>
      </button>
    </div>
    <div
      className="hig__flyout-v1__container"
      style={
        Object {
          "left": undefined,
          "top": undefined,
        }
      }
    >
      <div
        aria-hidden="true"
        className="hig__flyout-v1__chevron"
        role="presentation"
      />
      <div
        aria-hidden="true"
        className="hig__flyout-v1__chevron-cover"
        role="presentation"
      />
      <div
        className="hig__flyout-v1__panel-container"
        style={
          Object {
            "maxHeight": undefined,
          }
        }
      >
        <div
          className="hig__flyout-v1__panel-container__inner"
        >
          <div
            className="hig__flyout-v1__panel"
            onScroll={undefined}
          >
            <div
              className="logo"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`top-nav/presenters/ProfileAction  3`] = `
<div
  className="hig__top-nav__action"
>
  <div
    className="hig__flyout-v1 hig__flyout-v1--exited hig__flyout-v1--top-right"
  >
    <div
      className="hig__flyout-v1__action"
    >
      <button
        className="hig__top-nav__profile-action"
        onClick={[Function]}
        type="button"
      >
        <figure
          aria-label="Avatar for Richard Feynman"
          className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--6"
        >
          <div
            className="hig__avatarV2__image-wrapper"
          >
            <img
              alt="Avatar image of Richard Feynman"
              className="hig__avatarV2__image"
              onError={[Function]}
              src="richard_phillips_feynman.png"
            />
          </div>
          <div
            aria-hidden="true"
            className="hig__avatarV2__initials"
          >
            RF
          </div>
        </figure>
      </button>
    </div>
    <div
      className="hig__flyout-v1__container"
      style={
        Object {
          "left": undefined,
          "top": undefined,
        }
      }
    >
      <div
        aria-hidden="true"
        className="hig__flyout-v1__chevron"
        role="presentation"
      />
      <div
        aria-hidden="true"
        className="hig__flyout-v1__chevron-cover"
        role="presentation"
      />
      <div
        className="hig__flyout-v1__panel-container"
        style={
          Object {
            "maxHeight": undefined,
          }
        }
      >
        <div
          className="hig__flyout-v1__panel-container__inner"
        >
          <div
            className="hig__flyout-v1__panel"
            onScroll={undefined}
          >
            <div
              className="logo"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
